# xclients

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml  tree.txt
core/: pyproject.toml
core/cli/: da3.py
plugins/server_da3/: pyproject.toml
plugins/server_fp/: main.py  main_debug.py  pyproject.toml
plugins/server_sam3do/: main.py  pyproject.toml
plugins/server_sam3do/src/: server.py
plugins/server_sam3do/src/server_sam3do/: server.py
scripts/: \  da3.py  foundation_pose.py  fp_test.py  roboreg.py  roboreg.sh  sam3.py  sam3do.py  triangulate.py
scripts/sam3do_results/result_20260217_152843_1/: output.json
scripts/sam_utils/: save_results.py
src/xclients/: __init__.py  triangulate.py
src/xclients/cli/: preprocess.py
src/xclients/core/: cfg.py  tf.py
src/xclients/core/run/: blueprint.py  fustrum.py  rerun_urdf.py
src/xclients/tri/: camera_parameters.py  read.py  rerun_urdf.py
src/xclients/tri/rerun_util/: blueprint.py  log.py
